[tool.poetry]
name = "aurora-io"
version = "3.0.16a0"
description = ""
authors = ["André (Xico) Souza <andre.souza@br.experian.com>"]

[[tool.poetry.source]]
name = "datalab"
url = "https://pypi.datalabserasaexperian.com.br/repository/pypi-all/simple/"
priority = "primary"

[[tool.poetry.source]]
name = "PyPI"
priority = "supplemental"

[tool.poetry.scripts]
copy = "aurora_prepare_backtest_pipeline.main:run"

[tool.poetry.dependencies]
python = "~3.8.0"
pandas = ">1.2.2,<2.0.4"
pyaml = ">20.0.0,<24.0.0"
dataclasses-json = "^0.5.4"
pyarrow = ">3.0.0"
fastparquet = { version = ">0.7.0", extras = ["all", "fastparquet"] }
sas7bdat = { version = "^2.2.3", extras = ["all", "sas7bdat"] }
dask = { version = "<2022.0.0", extras = ["all", "dask"] }
boto3 = "1.24.59"
s3fs = "2022.8.2"
botocore = "1.27.59"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
dask = "<2022.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
